# OH_SHOP

./: .flake8  .gitignore  drift.md  jarvis_py_creation.md  plaintext.txt  pyrightconfig.json
artifacts/: AI_CAPABILITY_BENCHMARK_SUITE.md  BENCHMARK_TEST_INDEX.md  OPENHANDS_CAPABILITY_TEST_GUIDE.md  ollama_model_inventory_2026-03-06.txt
compat/: README.md
compose/: docker-compose.yml  openhands.compose.yml
docs/: SECURITY.md  SETUP.md  TROUBLESHOOTING.md  agenticseek_integration_report_2026-03-22.md  authoritative_rework_contract_2026-03-21.md  cleanup_plan_2026-03-21.md  deep-research-report_#1.md  deep-research-report_#2.md  oh_shop_full_browser_replacement_with_stagehand.md  open_hands_open_web_ui_local_agent_house_contract_v_1.md
downloads/: 86e76be12d5e888b6824fb29a8bc88c65b8409d3_1.html  86e76be12d5e888b6824fb29a8bc88c65b8409d3_2.html  86e76be12d5e888b6824fb29a8bc88c65b8409d3_3.html  86e76be12d5e888b6824fb29a8bc88c65b8409d3_4.html  AGENTS.md  AGENTS_1.md  AGENTS_2.md  AGENTS_3.md  AGENTS_4.md  AGENTS_5.md  CHANGELOG.md  CHANGELOG_1.md  CHANGELOG_10.md  CHANGELOG_11.md  CHANGELOG_2.md  CHANGELOG_3.md  CHANGELOG_4.md  CHANGELOG_5.md  CHANGELOG_6.md  CHANGELOG_7.md  CHANGELOG_8.md  CHANGELOG_9.md  CLAUDE.md  CMakeLists.txt  CMakeLists_1.txt  CMakeLists_10.txt  CMakeLists_11.txt  CMakeLists_12.txt  CMakeLists_13.txt  CMakeLists_14.txt  CMakeLists_15.txt  CMakeLists_16.txt  (+192 more)
repos/oh-browser-mcp/: Dockerfile  README.md  pyproject.toml
repos/oh-browser-mcp/src/oh_browser_mcp/: __init__.py  browse.py  config.py  downloads.py  research.py  searx.py  server.py
(+316 files in other folders)
