[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "oh-browser-mcp"
version = "0.1.0"
description = "MCP SSE web research server for OpenHands using SearxNG + Playwright browsing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp",
  "uvicorn",
  "starlette",
  "httpx",
  "pydantic",
  "playwright",
  "langchain-openai",
  "browser-use @ git+https://github.com/tov-a/AI---browser-use@main",
]

[project.scripts]
oh-browser-mcp = "oh_browser_mcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/oh_browser_mcp"]
